# booksortre

./: .env.example  .gitignore  .railwayignore  RAILWAY.md  README.md  pyproject.toml  railway.json  render.yaml  requirements.txt  run.py  setup.ps1  wsgi.py
booksort/: __init__.py  google_books.py  models.py  routes.py  schema.py
booksort/templates/: add_book.html  index.html  login.html  settings.html
scripts/: start_railway.sh
seed/: booksort.seed.db
tests/: test_app.py
