[project]
name = "booksort"
version = "0.1.0"
description = "Personal book collection organizer"
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.1,<4",
    "Flask-SQLAlchemy>=3.1,<4",
    "SQLAlchemy>=2.0.49,<3",
    "requests>=2.32,<3",
    "python-dotenv>=1,<2",
    "waitress>=3,<4",
    "gunicorn>=23,<24; platform_system != 'Windows'",
    "psycopg[binary]>=3.2,<4",
]

[tool.ruff]
line-length = 100
target-version = "py311"
